added redo functionality

--- a/index.html
+++ b/index.html
@@ -17,8 +17,13 @@
       </section>
 
       <div class="controls">
-        <button class="btn btn-addrow" id="addRowButton" onclick="addNewRow()">Add Row</button>
-        <button class="btn btn-undo" id="undoButton" onclick="undoLastAction()">Undo</button>
+        <button class="btn btn-addrow" id="addRowButton" onclick="addNewRow()">
+          Add Row
+        </button>
+        <button class="btn btn-undo" id="undoButton" onclick="undoLastAction()">
+          Undo
+        </button>
+        <button class="btn btn-redo" onclick="redoLastAction()">Redo</button>
       </div>
     </main>
 
